# CompilerProject

./: .gitignore  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  main.cpp
res/: return_2  return_2.c  return_2.s
src/: Compiler.cpp  Compiler.hpp  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
src/Stages/: CodeGenerator.cpp  CodeGenerator.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp
src/Types/: SymbolMap.cpp  SymbolMap.hpp
src/Types/Lexing/: TokenList.cpp  TokenList.hpp  Tokens.hpp
src/Types/Lexing/Tokens/: Identifier.cpp  Identifier.hpp  Keyword.cpp  Keyword.hpp  Literal.cpp  Literal.hpp  Symbol.cpp  Symbol.hpp  Token.cpp  Token.hpp
src/Types/Parsing/: AST.cpp  AST.hpp  SyntaxNode.cpp  SyntaxNode.hpp
src/Types/Parsing/Syntax/: ParsedNodes.hpp
src/Types/Parsing/Syntax/Expressions/: BinaryOperatorNode.cpp  BinaryOperatorNode.hpp  ConditionalExpressionNode.cpp  ConditionalExpressionNode.hpp  ConstantNode.cpp  ConstantNode.hpp  ExpressionNode.cpp  ExpressionNode.hpp  FactorNode.cpp  FactorNode.hpp  FunctionCallNode.cpp  FunctionCallNode.hpp  IFunction.cpp  IFunction.hpp  IOperator.cpp  IOperator.hpp  IVariable.cpp  IVariable.hpp  TermNode.cpp  TermNode.hpp  UnaryOperatorNode.cpp  UnaryOperatorNode.hpp  VariableNode.cpp  VariableNode.hpp  VariableReferenceNode.cpp  VariableReferenceNode.hpp
src/Types/Parsing/Syntax/Functions/: FunctionNode.cpp  FunctionNode.hpp  GlobalNode.cpp  GlobalNode.hpp  ParameterNode.cpp  ParameterNode.hpp  Parameters.cpp  Parameters.hpp  ProgramNode.cpp  ProgramNode.hpp
src/Types/Parsing/Syntax/Statements/: AssignmentNode.cpp  AssignmentNode.hpp  BodyNode.cpp  BodyNode.hpp  BreakNode.cpp  BreakNode.hpp  ConditionalStatementNode.cpp  ConditionalStatementNode.hpp  ContinueNode.cpp  ContinueNode.hpp  DeclarationNode.cpp  DeclarationNode.hpp  DoWhileLoopNode.cpp  DoWhileLoopNode.hpp  ForLoopNode.cpp  ForLoopNode.hpp  ReturnNode.cpp  ReturnNode.hpp  StatementNode.cpp  StatementNode.hpp  WhileLoopNode.cpp  WhileLoopNode.hpp
